--- a/012_brad_css/01_edge_ledger/css/utilities.css
+++ b/012_brad_css/01_edge_ledger/css/utilities.css
@@ -7,6 +7,39 @@
   color: #0284d0;
 }
 
+/* Navbar */
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #333;
+  color: #fff;
+  opacity: 0.8;
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0px;
+  padding: 0 30px;
+}
+
+.navbar a {
+  color: #fff;
+  padding: 10px 20px;
+  margin: 0 5px;
+}
+
+.navbar ul {
+  display: flex;
+}
+
+.navbar a:hover {
+  border-bottom: 2px solid #28a745;
+}
+
+.navbar .logo {
+  font-weight: 400;
+}
+
 /* Button */
 .btn {
   cursor: pointer;
@@ -22,24 +55,38 @@
   opacity: 0.9;
 }
 
-.btn-primary {
+.btn-primary,
+.bg-primary {
   background: #28a745;
   color: #fff;
 }
 
-.btn-secondary {
+.btn-secondary,
+.bg-secondary {
   background: #0284d0;
   color: #fff;
 }
 
-.btn-dark {
-  background: #333;
+.btn-primary {
+  background: #0284d0;
   color: #fff;
 }
 
-.btn-light {
-  background: #f4f4f4;
+.btn-dark,
+.bg-dark {
+  background-color: #333;
+  color: #fff;
+}
+
+.btn-light,
+.bg-light {
+  background-color: #f4f4f4;
   color: #333;
+}
+
+.btn-outline {
+  background: transparent;
+  border: 1px solid #fff;
 }
 
 /* Flex Items */
@@ -47,6 +94,113 @@
   display: flex;
   text-align: center;
   justify-content: center;
-  align-items: center;
+  align-content: center;
   height: 100%;
+}
+
+.flex-items > div {
+  padding: 20px;
+}
+
+/* Flex columns */
+
+.flex-columns.flex-reverse {
+  flex-direction: row-reverse;
+}
+
+.flex-columns .row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+}
+
+.flex-columns .column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
+.flex-columns .column .column-1,
+.flex-columns .column .column-2 {
+  height: 100%;
+}
+
+.flex-columns img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.flex-columns .column-2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 30px;
+}
+
+.flex-columns h4 {
+  margin-bottom: 10px;
+}
+
+.flex-columns p {
+  margin: 20px 0;
+}
+
+/* Section header */
+.section-header {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.section-header h2 {
+  font-size: 40px;
+  margin: 20px 0;
+}
+
+.section-padding {
+  padding: 20px 20px 40px;
+}
+
+/* Flex Grid */
+.flex-grid .row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+.flex-grid .column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+/* Mobile view */
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    height: 120px;
+    padding: 20px;
+  }
+
+  .navbar a {
+    padding: 10px 10px;
+    margin: 2px;
+  }
+
+  .flex-items {
+    flex-direction: column;
+  }
+
+  .flex-columns .column,
+  .flex-grid .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
