--- a/012_brad_css/01_edge_ledger/css/style.css
+++ b/012_brad_css/01_edge_ledger/css/style.css
@@ -78,6 +78,11 @@ img {
   z-index: 10;
 }
 
+.hero.blog {
+  background: url('../img/home/blog.jpg') no-repeat center center/ cover;
+  height: 30vh;
+}
+
 /* Icons */
 .icons {
   padding: 30px;
