--- a/013_yelp/style.css
+++ b/013_yelp/style.css
@@ -207,7 +207,7 @@ header .header-writing {
 }
 
 .yelp-place {
-  background: #f5f6f5;
+  background: #fff;
   padding: 15px 0px;
 }
 
@@ -324,6 +324,11 @@ header .header-writing {
 }
 
 /* Local yelp & official yelp section */
+
+.local-official {
+  padding: 30px 0;
+}
+
 .local-img {
   height: 100%;
   background-position: 50%;
@@ -340,12 +345,12 @@ header .header-writing {
   background-image: url('./img/local_off/2.png');
 }
 
-.local-offical h4 {
+.local-official h4 {
   text-align: center;
   color: #d32323;
 }
 
-.local-offical h5 {
+.local-official h5 {
   color: #999;
 }
 
@@ -362,4 +367,145 @@ header .header-writing {
 .local > h5 {
   text-align: center;
   color: #0073bb;
+  margin-top: 10px;
+}
+
+.official > h4,
+.local > h4 {
+  margin-bottom: 10px;
+}
+
+/* Review of the day & Recent Collections*/
+.rate-profile {
+  display: flex;
+}
+
+.rate-profile img {
+  border-radius: 4px;
+  margin-right: 10px;
+  height: 60px;
+}
+
+.rate-profile ul {
+  line-height: 1.2;
+  font-size: 16px;
+}
+
+.rate-profile i:first-child {
+  color: #f15c00;
+}
+
+.rate-profile i:last-child {
+  color: #fff;
+  padding: 1px;
+  background: #f15c00;
+  border-radius: 2px;
+}
+
+.rod {
+  border: 2px solid #e6e6e6;
+}
+
+.user-matter {
+  text-align: left;
+  line-height: 1.2;
+}
+
+.user-rating i {
+  color: #fff;
+  background: #d32323;
+  border-radius: 2px;
+  padding: 2px;
+}
+
+.banner {
+  background: #d0ecfb;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 4px;
+  padding: 1px 4px;
+}
+
+.rod-recent-flex {
+  display: flex;
+  flex-grow: 1;
+}
+
+.rod-recent-flex > * {
+  margin-left: 30px;
+}
+
+.banner img {
+  height: 25px;
+  transform: scale(1.6);
+}
+
+.rod-recent-flex h2 {
+  text-align: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.3125em;
+  color: #d32323;
+  margin-bottom: 10px;
+}
+
+.rod > * {
+  margin: 15px 0;
+}
+
+.rod {
+  padding: 10px;
+}
+
+.recent-collection-container {
+  border: 2px solid #e6e6e6;
+}
+
+.recent-collection-item {
+  display: flex;
+  min-width: 275px;
+  padding: 19px 10px;
+  display: flex;
+  /* align-items: center; */
+}
+
+.recent-collection-item img {
+  height: 70px;
+  border-radius: 4px;
+}
+
+.recent-collection-item ul {
+  line-height: 1.1;
+  margin-left: 10px;
+}
+
+.rod-recent h5 {
+  color: #0073bb;
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* Recent activity */
+.recent-activity {
+  padding: 70px 0;
+}
+
+.recent-activity h2 {
+  text-align: center;
+  color: #d32323;
+}
+
+.recent-activity-card {
+  border: 2px solid #e6e6e6;
+  padding: 10px;
+}
+
+.card-user {
+  display: flex;
+}
+
+.card-user ul {
+  margin-left: 10px;
+  line-height: 1.2;
 }
