--- a/013_yelp/style.css
+++ b/013_yelp/style.css
@@ -467,7 +467,21 @@ header .header-writing {
   min-width: 275px;
   padding: 19px 10px;
   display: flex;
-  /* align-items: center; */
+  border-bottom: 1px solid #e6e6e6;
+}
+.recent-collection-item:last-child {
+  border-bottom: none;
+}
+
+.recent-activity h5 {
+  margin-top: 20px;
+  text-align: center;
+  color: #0073bb;
+}
+
+.recent-activity h5:hover {
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 .recent-collection-item img {
@@ -491,21 +505,251 @@ header .header-writing {
   padding: 70px 0;
 }
 
+.recent-activity-container {
+  display: flex;
+}
+
 .recent-activity h2 {
   text-align: center;
   color: #d32323;
+  margin-bottom: 20px;
 }
 
 .recent-activity-card {
   border: 2px solid #e6e6e6;
   padding: 10px;
+  margin-left: 30px;
+  flex: 1;
 }
 
 .card-user {
   display: flex;
+  border-bottom: 1px solid #e6e6e6;
+  padding-bottom: 10px;
 }
 
 .card-user ul {
   margin-left: 10px;
   line-height: 1.2;
+}
+
+.two-pizzas {
+  display: flex;
+}
+
+.pizza-box {
+  border: 2px solid #e6e6e6;
+}
+
+.pizza-box img {
+  display: block;
+  width: 100%;
+  height: 120px;
+}
+
+.pizza-box .like {
+  padding-left: 5px;
+  opacity: 0.6;
+}
+
+.pizza-box .like:hover {
+  color: #0073bb;
+  opacity: 1;
+  cursor: pointer;
+}
+
+.shake-img img {
+  width: 100%;
+  height: 150px;
+  display: block;
+  padding-bottom: 10px;
+}
+
+.shake-img {
+  border-bottom: 2px solid #e6e6e6;
+  padding-bottom: 10px;
+}
+
+.shake-review {
+  padding: 10px 0;
+  border-bottom: 2px solid #e6e6e6;
+}
+
+.shake-rating i {
+  color: #fff;
+  background: #d32323;
+  padding: 2px;
+  font-size: 13px;
+}
+
+.rate-icons {
+  padding: 10px 0;
+  font-size: 20px;
+}
+
+.rate-icons i {
+  margin: 0 6px;
+  opacity: 0.6;
+}
+
+.rate-icons i:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.rate-icons i:first-child:hover {
+  color: #f15c00;
+}
+
+.rate-icons i:nth-child(2):hover {
+  color: #08f100;
+}
+
+.rate-icons i:last-child:hover {
+  color: #0073bb;
+}
+
+.sub-like i {
+  opacity: 0.6;
+}
+
+.sub-like:hover {
+  opacity: 1;
+  color: #0073bb;
+  cursor: pointer;
+}
+
+/* Browse by categores section */
+.categories h2 {
+  text-align: center;
+  color: #d32323;
+  margin: 10px 0;
+}
+
+.categories {
+  background: #f5f6f5;
+  padding: 30px 0;
+}
+
+.categories-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex-item {
+  border: 2px solid #e6e6e6;
+  background: #fff;
+  flex: 1;
+  text-align: center;
+  padding: 10px 40px;
+  margin-left: 30px;
+  margin-top: 30px;
+  border-radius: 3px;
+}
+
+.flex-item:hover {
+  border-color: #0073bb;
+  cursor: pointer;
+  color: #0073bb;
+}
+
+.flex-item span {
+  width: 100%;
+  display: block;
+}
+
+.flex-item img {
+  height: 72px;
+  width: 72px;
+}
+
+/* Yelp mobile apps */
+.mobile-apps h2 {
+  text-align: center;
+  color: #d32323;
+  margin: 10px 0;
+}
+
+.mobile-apps img {
+  width: 50%;
+}
+
+.mobile-apps {
+  background: #fff;
+  padding: 30px 0;
+  padding-bottom: 50px;
+}
+
+.mobile-apps-flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mobile-apps-flex-item {
+  border: 2px solid #e6e6e6;
+  flex: 1;
+  text-align: center;
+  padding: 30px 40px;
+  margin-left: 30px;
+  border-radius: 3px;
+}
+
+.mobile-apps-flex-item:hover {
+  border-color: #0073bb;
+  cursor: pointer;
+  color: #0073bb;
+}
+
+footer {
+  background: #f5f6f5;
+  border-top: 2px solid #e6e6e6;
+  display: flex;
+  justify-content: center;
+  text-align: left;
+  padding: 40px 0;
+}
+
+footer ul {
+  margin-left: 50px;
+}
+
+footer ul li:first-child {
+  color: #d32323;
+  font-weight: 800;
+  font-size: 17px;
+  margin-bottom: 10px;
+}
+
+footer ul li {
+  color: #0073bb;
+  cursor: pointer;
+}
+
+footer ul li:not(:first-child):hover {
+  text-decoration: underline;
+}
+
+footer ul:last-child li:nth-child(3) {
+  color: #d32323;
+  font-weight: 800;
+  font-size: 17px;
+  margin: 10px 0;
+}
+
+.footer-image {
+  background: #f5f6f5;
+  text-align: center;
+  font-size: 12px;
+  padding: 30px;
+}
+
+.footer-image img:nth-child(2) {
+  margin-top: 10px;
+  height: 20px;
+  width: 20px;
+}
+
+.footer-image img:last-child {
+  height: 20px;
+  width: 20px;
 }
