--- a/014_amazon/style.css
+++ b/014_amazon/style.css
@@ -245,7 +245,7 @@ body {
   padding: 5px 10px;
   font-size: 13px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -273,6 +273,7 @@ body {
 .nav-main-ul {
   display: flex;
   align-items: center;
+  margin-left: 80px;
 }
 
 .nav-main-ul li {
@@ -315,4 +316,131 @@ body {
 
 .nav-subnav ul li {
   padding: 7px 10px;
+}
+
+.ad-section img {
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  background: #fff;
+}
+
+main {
+  background: #fff;
+  padding: 10px;
+}
+
+.breadcrums {
+  color: #767676;
+  font-size: 12px;
+}
+
+.breadcrums ul {
+  display: flex;
+}
+
+.breadcrums ul li {
+  margin-left: 5px;
+}
+
+.breadcrums ul li:hover {
+  color: #f08804;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+/* Sidenav */
+
+.sidenav {
+  /* border-right: 2px solid rgba(200, 200, 200, 0.1); */
+  color: #f5f5f5;
+  background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 400px;
+  height: 100vh;
+  z-index: 100;
+  transform: translateX(-100%);
+  transition: transform 0.1s ease-out;
+  box-shadow: 4px 0 10px 0 rgba(0, 0, 0, 0.4);
+}
+
+.sidenav-logo {
+  background: #232f3e;
+  padding: 15px 30px;
+  width: 100%;
+  font-size: 20px;
+  position: relative;
+}
+
+.sidenav ul {
+  overflow-y: scroll;
+}
+
+.sidenav-heading {
+  background: #fff;
+  padding: 10px 30px;
+  width: 100%;
+  font-size: 15px;
+  color: #767676;
+  text-transform: uppercase;
+}
+
+.sidenav ul li {
+  background: #fff;
+  padding: 15px 30px;
+  padding-right: 20px;
+  width: 100%;
+  font-size: 15px;
+  color: #767676;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sidenav ul li a {
+  display: block;
+  text-decoration: none;
+  color: #111;
+}
+
+.sidenav ul li:hover {
+  background: #d3d2d2;
+  cursor: pointer;
+}
+
+.sidenav ul li:hover i {
+  color: #111;
+}
+
+.modal-container {
+  background-color: rgba(0, 0, 0, 0.6);
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 90;
+}
+
+.modal-container.active {
+  display: block;
+}
+
+.close-btn {
+  color: #fff;
+  display: none;
+  /* background: black; */
+  position: absolute;
+  right: -44px;
+  padding: 6px 10px;
+  font-size: 35px;
+  top: 0;
+  cursor: pointer;
+}
+
+.close-btn.active {
+  display: inline;
 }
