--- a/015_blooms/style.css
+++ b/015_blooms/style.css
@@ -6,6 +6,10 @@
   margin: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Inter', sans-serif;
 }
@@ -47,7 +51,7 @@ a {
 #main-nav {
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 100;
   width: 100%;
   padding: 1rem 0;
 }
@@ -127,6 +131,141 @@ a {
 }
 
 /* Our business section */
-#our-business{
+#our-business {
   height: 100vh;
+  padding: 7rem 5rem;
+  overflow: hidden;
+  text-align: center;
+}
+
+.our-business-card-container {
+  display: grid;
+  grid-template-columns: repeat(5, 230px);
+  grid-gap: 40px;
+  margin: 0 auto;
+  justify-content: center;
+}
+
+.our-business-card-container img {
+  width: 100%;
+  height: 460px;
+}
+
+.card {
+  color: #e5e5e5;
+  background-color: #1b4332;
+}
+
+.card-text {
+  text-align: center;
+  padding: 1.5rem 0;
+}
+
+.card-text h4 {
+  font-style: bold;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+.card p {
+  font-style: normal;
+  font-size: 12px;
+  line-height: 15px;
+  padding: 5px;
+}
+
+.vector {
+  border-radius: 50%;
+  border: 1px solid #fff;
+  padding: 14px;
+}
+
+/* About us section */
+#about-us {
+  height: 100vh;
+  padding: 7rem 5rem;
+}
+
+.about-us-container {
+  display: grid;
+  grid-template-columns: 607px 573px;
+  justify-content: space-between;
+}
+
+.about-us-img img {
+  height: 600px;
+  /* width: 450px; */
+}
+
+.about-us-message {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 10%;
+  text-align: left;
+}
+
+.about-us-message h1 {
+  color: #1b4332;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 44px;
+  margin-bottom: 10px;
+}
+
+.about-us-message p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 40px;
+  /* or 167% */
+
+  color: #1b4332;
+}
+
+/* Contact section */
+#contact {
+  height: 100vh;
+  background: #0d1613;
+  color: #e5e5e5;
+}
+
+.contact-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.contact-container-content {
+  display: grid;
+  grid-template-rows: repeat(2, auto);
+  padding: 0.75rem 3rem;
+}
+
+.contact-row-1 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  text-align: center;
+  border-bottom: 2px solid #e5e5e5;
+}
+
+.contact-row-1 h1 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  margin-bottom: 1rem;
+}
+
+.contact-row-2 p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  padding: 2rem 0;
 }
