--- a/015_blooms/style.css
+++ b/015_blooms/style.css
@@ -56,6 +56,20 @@ a {
   padding: 1rem 0;
 }
 
+.active {
+  color: #1b4332;
+  background: #fff;
+}
+
+.active a {
+  color: #1b4332;
+}
+
+#main-nav.active ul li a:hover {
+  border-color: #1b4332;
+  color: #1b4332;
+}
+
 #main-nav .container h1 {
   font-style: normal;
   font-weight: 500;
