--- a/019_css_challenges/002/style.css
+++ b/019_css_challenges/002/style.css
@@ -24,20 +24,13 @@ body {
 }
 
 .container {
-  /* width: 80%; */
-  /* max-width: 750px; */
+  width: 80%;
+  max-width: 750px;
   margin: 0 auto;
+}
+
+.intro {
   background: #23424a;
   color: white;
   padding: 50px 0;
-}
-
-.intro-content {
-  width: 50%;
-  margin: 0 auto;
-}
-
-.about-content {
-  width: 50%;
-  margin: 0 auto;
 }
