--- a/019_css_challenges/005/style.css
+++ b/019_css_challenges/005/style.css
@@ -18,37 +18,87 @@ body {
   padding: 50px 0;
 }
 
-a {
+.btn {
   color: #23424a;
   background: #38cfd9;
   font-size: 1.3125rem;
-  padding: 1em;
+  padding: 0.8em 1.25em;
   border-radius: 35px;
   display: inline-block;
-  margin: 2em 0;
   text-transform: uppercase;
-  font-weight: bold;
+  font-weight: 900;
 }
 
-h1 {
+.btn:hover,
+.btn:focus {
+  opacity: 0.75;
+  cursor: pointer;
+}
+
+.hero h1 {
   font-size: 3rem;
   margin-bottom: 0.5em;
   font-weight: bolder;
 }
 
-p {
+.hero p {
   font-size: 1.3125rem;
   font-weight: normal;
+  margin-bottom: 2em;
+}
+
+.hero__text {
+  width: 90%;
 }
 
 .container {
   width: 60%;
   margin: 0 auto;
-  max-width: 768px;
+  max-width: 1100px;
 }
 
-@media (max-width: 768px) {
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
   html {
-    font-size: 14px;
+    font-size: 13px;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+}
+
+@media screen and (min-width: 1280px) {
+  /* For Big TV's (HD Screens)  */
+}
+
+@media screen and (min-width: 1920px) {
+  /* For Projectors or Higher Resolution Screens (Full HD) */
+}
+
+@media screen and (min-width: 3840px) {
+  /* For 4K Displays (Ultra HD) */
+  html {
+    font-size: 50px;
+  }
+
+  .container {
+    max-width: 60%;
+  }
+
+  .btn {
+    border-radius: 150px;
   }
 }
