--- a/023_sass/01_sassBrad/css/styles.css
+++ b/023_sass/01_sassBrad/css/styles.css
@@ -1,3 +1,10 @@
+.container {
+  max-width: 1100px;
+  padding: 0 30px;
+  margin: 0 auto;
+  overflow: auto;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -35,15 +42,27 @@ a {
 .showcase nav ul li {
   padding: 15px;
 }
+.showcase nav ul a:hover {
+  color: #ff8700;
+}
 .showcase a {
   color: #fff;
 }
-
-.container {
-  max-width: 1100px;
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
+.showcase-content {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.showcase-content img {
+  width: 50%;
+}
+.showcase-content h1 {
+  font-size: 50px;
+  line-height: 1.2;
+}
+.showcase-content p {
+  margin: 20px 0;
 }
 
 /*# sourceMappingURL=styles.css.map */
