--- a/023_sass/01_sassBrad/scss/styles.scss
+++ b/023_sass/01_sassBrad/scss/styles.scss
@@ -1,7 +1,6 @@
-$light-color: #f4f4f4;
-$font-stack: Arial, Helvetica, sans-serif;
-$primary-color: #0e6cff;
-$secondary-color: #ff8700;
+@import 'config';
+@import 'utilities';
+@import 'buttons';
 
 * {
   box-sizing: border-box;
@@ -40,17 +39,34 @@ a {
       li {
         padding: 15px;
       }
+
+      a:hover {
+        color: $secondary-color;
+      }
     }
   }
 
   a {
     color: #fff;
   }
-}
 
-.container {
-  max-width: 1100px;
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
+  &-content {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    img {
+      width: 50%;
+    }
+
+    h1 {
+      font-size: 50px;
+      line-height: 1.2;
+    }
+
+    p {
+      margin: 20px 0;
+    }
+  }
 }
