--- a/023_sass/01_sassBrad/css/styles.css
+++ b/023_sass/01_sassBrad/css/styles.css
@@ -1,10 +1,3 @@
-.container {
-  max-width: 1100px;
-  padding: 0 30px;
-  margin: 0 auto;
-  overflow: auto;
-}
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -42,17 +35,18 @@ a {
 .showcase nav ul li {
   padding: 15px;
 }
+.showcase nav ul a {
+  color: #fff;
+}
 .showcase nav ul a:hover {
   color: #ff8700;
-}
-.showcase a {
-  color: #fff;
 }
 .showcase-content {
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 30px;
 }
 .showcase-content img {
   width: 50%;
@@ -61,8 +55,164 @@ a {
   font-size: 50px;
   line-height: 1.2;
 }
-.showcase-content p {
-  margin: 20px 0;
+
+.container {
+  max-width: 1100px;
+  padding: 0 30px;
+  margin: 0 auto;
+  overflow: auto;
+}
+
+.m-1 {
+  margin: 1rem;
+}
+
+.my-1 {
+  margin: 1rem 0;
+}
+
+.mx-1 {
+  margin: 0 1rem;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.py-space {
+  padding: spacerem 0;
+}
+
+.px-space {
+  padding: 0 spacerem;
+}
+
+.m-2 {
+  margin: 2rem;
+}
+
+.my-2 {
+  margin: 2rem 0;
+}
+
+.mx-2 {
+  margin: 0 2rem;
+}
+
+.p-2 {
+  padding: 2rem;
+}
+
+.py-space {
+  padding: spacerem 0;
+}
+
+.px-space {
+  padding: 0 spacerem;
+}
+
+.m-3 {
+  margin: 3rem;
+}
+
+.my-3 {
+  margin: 3rem 0;
+}
+
+.mx-3 {
+  margin: 0 3rem;
+}
+
+.p-3 {
+  padding: 3rem;
+}
+
+.py-space {
+  padding: spacerem 0;
+}
+
+.px-space {
+  padding: 0 spacerem;
+}
+
+.m-4 {
+  margin: 4rem;
+}
+
+.my-4 {
+  margin: 4rem 0;
+}
+
+.mx-4 {
+  margin: 0 4rem;
+}
+
+.p-4 {
+  padding: 4rem;
+}
+
+.py-space {
+  padding: spacerem 0;
+}
+
+.px-space {
+  padding: 0 spacerem;
+}
+
+.m-5 {
+  margin: 5rem;
+}
+
+.my-5 {
+  margin: 5rem 0;
+}
+
+.mx-5 {
+  margin: 0 5rem;
+}
+
+.p-5 {
+  padding: 5rem;
+}
+
+.py-space {
+  padding: spacerem 0;
+}
+
+.px-space {
+  padding: 0 spacerem;
+}
+
+.btn-secondary, .btn-primary {
+  display: inline-block;
+  border-radius: 5px;
+  padding: 8px 20px;
+  margin: 3px;
+}
+.btn-secondary:hover, .btn-primary:hover {
+  transform: scale(0.98);
+}
+
+.btn-primary {
+  background-color: #418bff;
+  color: #fff;
+}
+
+.btn-secondary {
+  background-color: #ff8700;
+  color: #fff;
+}
+
+@media (max-width: 700px) {
+  .showcase {
+    height: 400px;
+  }
+  .showcase-content {
+    text-align: center;
+  }
+  .showcase-content img {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
